modified for use in new server

--- a/2-OpenTabulate/1-openTabulate.ipynb
+++ b/2-OpenTabulate/1-openTabulate.ipynb
@@ -188,7 +188,7 @@
      "name": "stdout",
      "text": [
       "Beginning data processing.\n",
-      "Completed processing in 42.9076714492403 seconds.\n"
+      "Completed processing in 191.5022289585322 seconds.\n"
      ]
     }
    ],
@@ -207,11 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Directory successfully copied!\n"
+     ]
+    }
+   ],
    "source": [
     "# transfer files directly from OpenTab/data/output to Merging/input\n",
+    "import shutil\n",
     "src = '../2-OpenTabulate/data/output'\n",
     "dst = '../3-Merging/input'\n",
     "\n",
