--- a/1-PreProcessing/preprocessing.ipynb
+++ b/1-PreProcessing/preprocessing.ipynb
@@ -82,7 +82,7 @@
     "if not(os.path.exists(dst)):\n",
     "    os.makedirs(dst)\n",
     "shutil.rmtree(dst)\n",
-    "# x = os.listdir(src)\n",
+    "x = os.listdir(src)\n",
     "print(x)\n",
     "shutil.copytree(src, dst, ignore=shutil.ignore_patterns('compress_vancouver', 'shapefiles'))\n",
     "\n",
@@ -3388,35 +3388,6 @@
     "# Standardize the dates of the csvs with non-empty date_established fields using standardize_dates.py\n",
     "import standardize_dates\n",
     "standardize_dates.main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nRemove invalid lat/lon coordinates\\nIn particular:\\n    - Several businesses in BC_Surrey_Business_Licences.csv have (lat, lon) = (1,1)\\n    - Several businesses in BC_Nanaimo_Business_Licences.csv have (lat, lon) = (0,0)\\n\\nI think I decided to move this step to during 3-Merging\\n'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Remove invalid lat/lon coordinates\n",
-    "In particular:\n",
-    "    - Several businesses in BC_Surrey_Business_Licences.csv have (lat, lon) = (1,1)\n",
-    "    - Several businesses in BC_Nanaimo_Business_Licences.csv have (lat, lon) = (0,0)\n",
-    "\n",
-    "I think I decided to move this step to during 3-Merging\n",
-    "'''\n",
-    "\n",
-    "# for ..."
    ]
   },
   {
