--- a/3-Merging/merging_main.ipynb
+++ b/3-Merging/merging_main.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3812jvsc74a57bd098b0a9b7b4eaaa670588a142fd0a9b87eaafe866f1db4228be72b4211d12040f",
-   "display_name": "Python 3.8.12 64-bit ('base': conda)"
+   "name": "python3105jvsc74a57bd03f6acfd5c7a89dd4516208ed2cd5283b5177bf58d22f895010c388a779688e5d",
+   "display_name": "Python 3.10.5 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "3f6acfd5c7a89dd4516208ed2cd5283b5177bf58d22f895010c388a779688e5d"
+   }
   }
  },
  "nbformat": 4,
@@ -34,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,38 +48,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Begin merging files together...\n",
-      "100%|██████████| 60/60 [00:03<00:00, 16.41it/s]\n",
+      "----------------------------------------------------------------------------------------------------------------------------\n",
+      "Merging files: 100%|██████████| 60/60 [00:04<00:00, 12.94it/s]\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows.csv\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows_sorted.csv\n",
+      "Reordering columns...\n",
+      "Done in 1 s\n",
       "Standardizing Province Names...\n",
-      "100%|██████████| 20/20 [00:05<00:00,  3.70it/s]\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/standardized_province_names.csv\n",
+      "Done in 1 s\n",
       "Standardizing Country Names...\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.08it/s]\n",
+      "Done in 0 s\n",
       "Making Postal Codes consistent...\n",
-      "100%|██████████| 844131/844131 [00:00<00:00, 1955652.17it/s]\n",
-      "Marking Duplicates\n",
-      "Creating idx_basic...\n",
-      "100%|██████████| 844131/844131 [00:00<00:00, 2007972.83it/s]\n",
+      "Done in 0 s\n",
+      "Fixing hyphens...\n",
+      "Done in 1 s\n",
+      "Marking Duplicates...\n",
+      "Done in 1 s\n",
       "Creating temp column:\n",
-      "Capitalize values and fill in blanks of dup_key columns with NULL to a copy of the df\n",
-      "100%|██████████| 9/9 [00:16<00:00,  1.83s/it]\n",
-      "Appending dup_key columns together and assign to temp column\n",
-      "100%|██████████| 9/9 [00:02<00:00,  4.18it/s]\n",
+      "Capitalize values and remove punctuation characters: 100%|██████████| 9/9 [00:09<00:00,  1.02s/it]\n",
+      "Fill blanks with NULL...\n",
+      "Done in 5 s\n",
+      "Appending dup_key columns together and assign to temp column: 100%|██████████| 9/9 [00:02<00:00,  3.95it/s]\n",
       "Applying hashing to get new indicies...\n",
-      "100%|██████████| 844131/844131 [00:00<00:00, 1957214.34it/s]\n",
       "Filling in geo_source column\n",
       "Dropping duplicates\n",
       "41567 duplicate rows dropped\n",
+      "Done in 3 s\n",
       "Writing 802564 dataframe entries to csv. This will take a while and unfortunately no easy progress bar solutions were available here...\n",
-      "File saved to /home/jovyan/ODBiz/3-Merging/output/ODBiz_dups_only_2022-07-25.csv\n",
-      "File saved to /home/jovyan/ODBiz/3-Merging/output/1-ODBiz_merged_2022-07-25.csv\n",
-      "Finished in 54.417547 seconds\n"
+      "Duplicates only csv saved to /home/jovyan/ODBiz/3-Merging/double_check/ODBiz_dups_only.csv\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/output/1-ODBiz_merged_2022-07-28.csv\n",
+      "csv took 12 s to save\n",
+      "Execution finished in 49.008975 seconds\n"
      ]
     }
    ],
@@ -84,20 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 81/81 [00:05<00:00, 15.22it/s]\n",
+      "Loading data: 100%|██████████| 81/81 [00:04<00:00, 16.35it/s]\n",
+      "\n",
       "Fixing invalid coordinates and marking valid ones\n",
       "Done in 0 s\n",
       "Forcing invalid coords to be blank\n",
-      "Affected rows saved to /home/jovyan/ODBiz/3-Merging/output/invalid_coords_affected_rows_2022-07-25.csv\n",
+      "Affected rows saved to /home/jovyan/ODBiz/3-Merging/double_check/invalid_coords_affected_rows.csv\n",
       "Done in 8 s\n",
-      "df saved to /home/jovyan/ODBiz/3-Merging/output/2-ODBiz_merged_2022-07-25.csv\n"
+      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/coord_ranges.csv\n",
+      "df saved to /home/jovyan/ODBiz/3-Merging/output/2-ODBiz_merged_2022-07-28.csv\n"
      ]
     }
    ],
@@ -107,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 9/9 [00:05<00:00,  1.74it/s]\n",
+      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  1.98it/s]\n",
       "Filling in NA as empty string\n",
       "Done in 4 s\n",
       "Concatenating address info\n",
@@ -122,10 +136,11 @@
       "Checking for blanks\n",
       "Done in 0 s\n",
       "Dropping entries with insufficient address info\n",
+      "Saving df_no_info to /home/jovyan/ODBiz/3-Merging/double_check/no_addr_info.csv\n",
       "Done in 1 s\n",
-      "Saving df to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-07-25.csv\n",
+      "Saving df to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-07-28.csv\n",
       "Done in 13 s\n",
-      "df saved to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-07-25.csv\n"
+      "df saved to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-07-28.csv\n"
      ]
     }
    ],
