Improved documentation, replaced obsolete links

--- a/1-PreProcessing/findNonCanadianBiz.ipynb
+++ b/1-PreProcessing/findNonCanadianBiz.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# findNonCanadianBiz.ipynb\n",
+    "\n",
+    "This script was used to find non-Canadian Businesses, mainly based on the value in their respective `province` columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
