--- a/3-Merging/merging_main.ipynb
+++ b/3-Merging/merging_main.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import MergingBiz\n",
     "import RemoveInvalidCoordinates\n",
-    "import FilterNoAddrInfo\n"
+    "import FilterNoAddrInfo\n",
+    "import fix_NAICS_codes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +31,7 @@
      "name": "stdout",
      "text": [
       "----------------------------------------------------------------------------------------------------------------------------\n",
-      "Merging files: 100%|██████████| 61/61 [00:05<00:00, 11.09it/s]\n",
+      "Merging files: 100%|██████████| 61/61 [00:04<00:00, 12.80it/s]\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows.csv\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows_sorted.csv\n",
       "Reordering columns...\n",
@@ -47,10 +48,10 @@
       "Marking Duplicates...\n",
       "Done in 1 s\n",
       "Creating temp column:\n",
-      "Capitalize values and remove punctuation characters: 100%|██████████| 9/9 [00:09<00:00,  1.03s/it]\n",
+      "Capitalize values and remove punctuation characters: 100%|██████████| 9/9 [00:10<00:00,  1.12s/it]\n",
       "Fill blanks with NULL...\n",
-      "Done in 5 s\n",
-      "Appending dup_key columns together and assign to temp column: 100%|██████████| 9/9 [00:02<00:00,  3.45it/s]\n",
+      "Done in 6 s\n",
+      "Appending dup_key columns together and assign to temp column: 100%|██████████| 9/9 [00:02<00:00,  3.28it/s]\n",
       "Applying hashing to get new indicies...\n",
       "Filling in geo_source column\n",
       "Dropping duplicates\n",
@@ -58,14 +59,39 @@
       "Done in 3 s\n",
       "Writing 803839 dataframe entries to csv. This will take a while and unfortunately no easy progress bar solutions were available here...\n",
       "Duplicates only csv saved to /home/jovyan/ODBiz/3-Merging/double_check/ODBiz_dups_only.csv\n",
-      "File saved to /home/jovyan/ODBiz/3-Merging/output/1-ODBiz_merged_2022-08-03.csv\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/output/1-ODBiz_merged_2022-08-04.csv\n",
       "csv took 13 s to save\n",
-      "Execution finished in 51.672505 seconds\n"
+      "Execution finished in 53.877322 seconds\n"
      ]
     }
    ],
    "source": [
     "MergingBiz.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Loading data: 100%|██████████| 81/81 [00:05<00:00, 15.81it/s]\n",
+      "\n",
+      "Fixing invalid coordinates and marking valid ones\n",
+      "Done in 0 s\n",
+      "Forcing invalid coords to be blank\n",
+      "Affected rows saved to /home/jovyan/ODBiz/3-Merging/double_check/invalid_coords_affected_rows.csv\n",
+      "Done in 11 s\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/coord_ranges.csv\n",
+      "df saved to /home/jovyan/ODBiz/3-Merging/output/2-ODBiz_merged_2022-08-04.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "RemoveInvalidCoordinates.main()"
    ]
   },
   {
@@ -77,20 +103,24 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 81/81 [00:04<00:00, 16.72it/s]\n",
-      "\n",
-      "Fixing invalid coordinates and marking valid ones\n",
+      "Loading data: 100%|██████████| 9/9 [00:05<00:00,  1.79it/s]\n",
+      "Filling in NA as empty string\n",
+      "Done in 4 s\n",
+      "Concatenating address info\n",
+      "Done in 8 s\n",
+      "Checking for blanks\n",
       "Done in 0 s\n",
-      "Forcing invalid coords to be blank\n",
-      "Affected rows saved to /home/jovyan/ODBiz/3-Merging/double_check/invalid_coords_affected_rows.csv\n",
-      "Done in 10 s\n",
-      "File saved to /home/jovyan/ODBiz/3-Merging/double_check/coord_ranges.csv\n",
-      "df saved to /home/jovyan/ODBiz/3-Merging/output/2-ODBiz_merged_2022-08-03.csv\n"
+      "Dropping entries with insufficient address info\n",
+      "Saving df_no_info to /home/jovyan/ODBiz/3-Merging/double_check/no_addr_info.csv\n",
+      "Done in 1 s\n",
+      "Saving df to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-04.csv\n",
+      "Done in 12 s\n",
+      "df saved to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-04.csv\n"
      ]
     }
    ],
    "source": [
-    "RemoveInvalidCoordinates.main()"
+    "FilterNoAddrInfo.main()"
    ]
   },
   {
@@ -102,36 +132,28 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  1.90it/s]\n",
-      "Filling in NA as empty string\n",
-      "Done in 4 s\n",
-      "Concatenating address info\n",
-      "Done in 7 s\n",
-      "Checking for blanks\n",
-      "Done in 0 s\n",
-      "Dropping entries with insufficient address info\n",
-      "Saving df_no_info to /home/jovyan/ODBiz/3-Merging/double_check/no_addr_info.csv\n",
-      "Done in 0 s\n",
-      "Saving df to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-03.csv\n",
-      "Done in 11 s\n",
-      "df saved to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-03.csv\n"
+      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  1.89it/s]\n",
+      "Loaded in        803658 rows\n",
+      "Resulting df has 803658 rows\n",
+      "File saved to /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-04.csv\n",
+      "Execution finished in 18 s\n"
      ]
     }
    ],
    "source": [
-    "FilterNoAddrInfo.main()"
+    "fix_NAICS_codes.main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "A subset of the most recent merged file has been saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
+      "Most recent merged file saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
      ]
     }
    ],
@@ -178,9 +200,9 @@
     "#     print(f'A subset of the most recent merged file has been saved to {output_filepath}')\n",
     "#     break\n",
     "\n",
-    "# # Copy over the entire df\n",
-    "# shutil.copyfile(most_recent_filepath, output_filepath)\n",
-    "# print(f'Most recent merged file saved to {output_filepath}')"
+    "# Copy over the entire df\n",
+    "shutil.copyfile(most_recent_filepath, output_filepath)\n",
+    "print(f'Most recent merged file saved to {output_filepath}')"
    ]
   },
   {
