--- a/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
+++ b/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-08-08T21:22:12.105736Z",
@@ -22,23 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('664', 'postcode'), ('malachan', 'city')]"
+       "[('1200', 'house_number'), ('77 avenue nw', 'road')]"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 5
     }
    ],
    "source": [
     "from postal.parser import parse_address\n",
-    "addr_to_parse = '664 Malachan'\n",
+    "addr_to_parse = '1200 - 77 AVENUE NW' # Proper\n",
+    "addr_to_parse = '1200 - 77 Avenue NW' # \n",
+    "# addr_to_parse = '101 - 15155 101 Avenue' # not proper\n",
+    "# addr_to_parse = '101-15155 101 Avenue' # Proper. has 3 nums, lowercase\n",
     "parse_address(addr_to_parse)"
    ]
   },
@@ -2274,7 +2277,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3105jvsc74a57bd03f6acfd5c7a89dd4516208ed2cd5283b5177bf58d22f895010c388a779688e5d",
-   "display_name": "Python 3.10.5 64-bit ('odbiz': conda)"
+   "display_name": "Python 3.10.5 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
