Consolidate parsed address columns

--- a/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
+++ b/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-08-08T21:22:12.105736Z",
@@ -18,6 +18,76 @@
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-08T21:22:12.846558Z",
+     "iopub.status.busy": "2022-08-08T21:22:12.846096Z",
+     "iopub.status.idle": "2022-08-08T21:22:17.770542Z",
+     "shell.execute_reply": "2022-08-08T21:22:17.768522Z",
+     "shell.execute_reply.started": "2022-08-08T21:22:12.846532Z"
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Loading data: 100%|██████████| 81/81 [00:05<00:00, 13.58it/s]Successfully loaded /home/jovyan/ODBiz/4-Parsing/output/parsed_and_combined_biz.csv\n",
+      "df has 803584 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the csv\n",
+    "input_csv = '/home/jovyan/ODBiz/4-Parsing/output/parsed_and_combined_biz.csv'\n",
+    "# input_csv = '/home/jovyan/ODBiz/4-Parsing/custom_parsing_data/extract_detected_parsing_errors.csv'\n",
+    "total_lines = 803584\n",
+    "chunksize = 10000\n",
+    "df = pd.concat([chunk for chunk in tqdm(pd.read_csv(input_csv,\n",
+    "                                        chunksize=chunksize, \n",
+    "                                        dtype=str), \n",
+    "                                    desc='Loading data', \n",
+    "                                    total=total_lines//chunksize+1)\n",
+    "                ])\n",
+    "num_of_rows = df.shape[0]\n",
+    "print(f'Successfully loaded {input_csv}')\n",
+    "print(f'df has {num_of_rows} rows')\n",
+    "\n",
+    "# localfiles = pd.unique(df['localfile'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                               full_address              unit street_no  \\\n7353                       145-H EAGLE CRES               NaN     145-H   \n7631                       122 C EAGLE CRES               NaN     122 C   \n29341   FRONT ST PARKADE NEW WESTMINSTER BC  Front st parkade        st   \n29467                   291 A Second Avenue               291         a   \n29486             A6890 Pacific Rim Highway               NaN     a6890   \n...                                     ...               ...       ...   \n802909                           4 Plazaway                 4  plazaway   \n803089              74 1/2 Churchill Avenue                74       1/2   \n803114                    60620A Green Road               NaN    60620a   \n803251                   144 A Thorold Road               144         a   \n803405                53-A East Main Street                53         a   \n\n       LP2_street_no          street_name             city province  \n7353             NaN           EAGLE CRES            Banff       AB  \n7631             NaN           EAGLE CRES            Banff       AB  \n29341             st             parkade   New Westminster       BC  \n29467              a        second avenue    Williams Lake       BC  \n29486          a6890  pacific rim highway         Ucluelet       BC  \n...              ...                  ...              ...      ...  \n802909      plazaway                  NaN          Welland       ON  \n803089           1/2     churchill avenue          Welland       ON  \n803114        60620a           green road          Welland       ON  \n803251             a         thorold road          Welland       ON  \n803405             a     east main street          Welland       ON  \n\n[17526 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>full_address</th>\n      <th>unit</th>\n      <th>street_no</th>\n      <th>LP2_street_no</th>\n      <th>street_name</th>\n      <th>city</th>\n      <th>province</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7353</th>\n      <td>145-H EAGLE CRES</td>\n      <td>NaN</td>\n      <td>145-H</td>\n      <td>NaN</td>\n      <td>EAGLE CRES</td>\n      <td>Banff</td>\n      <td>AB</td>\n    </tr>\n    <tr>\n      <th>7631</th>\n      <td>122 C EAGLE CRES</td>\n      <td>NaN</td>\n      <td>122 C</td>\n      <td>NaN</td>\n      <td>EAGLE CRES</td>\n      <td>Banff</td>\n      <td>AB</td>\n    </tr>\n    <tr>\n      <th>29341</th>\n      <td>FRONT ST PARKADE NEW WESTMINSTER BC</td>\n      <td>Front st parkade</td>\n      <td>st</td>\n      <td>st</td>\n      <td>parkade</td>\n      <td>New Westminster</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>29467</th>\n      <td>291 A Second Avenue</td>\n      <td>291</td>\n      <td>a</td>\n      <td>a</td>\n      <td>second avenue</td>\n      <td>Williams Lake</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>29486</th>\n      <td>A6890 Pacific Rim Highway</td>\n      <td>NaN</td>\n      <td>a6890</td>\n      <td>a6890</td>\n      <td>pacific rim highway</td>\n      <td>Ucluelet</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>802909</th>\n      <td>4 Plazaway</td>\n      <td>4</td>\n      <td>plazaway</td>\n      <td>plazaway</td>\n      <td>NaN</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803089</th>\n      <td>74 1/2 Churchill Avenue</td>\n      <td>74</td>\n      <td>1/2</td>\n      <td>1/2</td>\n      <td>churchill avenue</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803114</th>\n      <td>60620A Green Road</td>\n      <td>NaN</td>\n      <td>60620a</td>\n      <td>60620a</td>\n      <td>green road</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803251</th>\n      <td>144 A Thorold Road</td>\n      <td>144</td>\n      <td>a</td>\n      <td>a</td>\n      <td>thorold road</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803405</th>\n      <td>53-A East Main Street</td>\n      <td>53</td>\n      <td>a</td>\n      <td>a</td>\n      <td>east main street</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n  </tbody>\n</table>\n<p>17526 rows × 7 columns</p>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "pd.options.display.max_columns = None\n",
+    "drows = 100\n",
+    "pd.options.display.max_rows = drows\n",
+    "\n",
+    "street_num_has_non_digit = df['street_no'].str.contains(r'[\\D\\s]', regex = True, na = False)\n",
+    "addr_cols = ['full_address', 'unit', 'street_no', 'LP2_street_no', 'street_name', 'city', 'province']\n",
+    "\n",
+    "# street_num_has_non_digit = df['LP2_street_no'].str.contains(r'[\\D\\s]', regex = True, na = False)\n",
+    "# addr_cols = ['full_address', 'LP2_unit', 'LP2_street_no', 'LP_street_name', 'city', 'province']\n",
+    "\n",
+    "display(df.loc[street_num_has_non_digit, addr_cols])"
    ]
   },
   {
@@ -58,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-23T22:09:57.005458Z",
-     "iopub.status.busy": "2022-08-23T22:09:57.004940Z",
-     "iopub.status.idle": "2022-08-23T22:09:57.012027Z",
-     "shell.execute_reply": "2022-08-23T22:09:57.011291Z",
-     "shell.execute_reply.started": "2022-08-23T22:09:57.005423Z"
+     "iopub.execute_input": "2022-08-25T23:19:27.404167Z",
+     "iopub.status.busy": "2022-08-25T23:19:27.403801Z",
+     "iopub.status.idle": "2022-08-25T23:19:27.412251Z",
+     "shell.execute_reply": "2022-08-25T23:19:27.411290Z",
+     "shell.execute_reply.started": "2022-08-25T23:19:27.404138Z"
     },
     "tags": []
    },
@@ -73,20 +143,17 @@
     {
      "data": {
       "text/plain": [
-       "[('units 43 44', 'house'),\n",
-       " ('45', 'house_number'),\n",
-       " ('5350', 'postcode'),\n",
-       " ('big white rd.', 'road')]"
+       "[('945-167', 'house_number'), ('avenue ne', 'road')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from postal.parser import parse_address\n",
-    "addr_to_parse = 'Units 43, 44, 45, 5350 Big White Rd.' \n",
+    "addr_to_parse = \"945 - 167 AVENUE NE\"\n",
     "parse_address(addr_to_parse)"
    ]
   },
@@ -243,7 +310,7 @@
     "import pandas as pd\n",
     "from parse_csv import parsing_df_wrapper\n",
     "\n",
-    "input_csv = '/home/jovyan/ODBiz/4-Parsing/custom_parsing_data/unparsed_addresses.csv'\n",
+    "input_csv = ''\n",
     "output_csv = '/home/jovyan/ODBiz/4-Parsing/custom_parsing_data/unparsed_addresses2.csv'\n",
     "\n",
     "df = pd.read_csv(input_csv, dtype = str)\n",
@@ -276,48 +343,6 @@
    ],
    "source": [
     "df.loc[0, 'LP2_street_no']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-08T21:22:12.846558Z",
-     "iopub.status.busy": "2022-08-08T21:22:12.846096Z",
-     "iopub.status.idle": "2022-08-08T21:22:17.770542Z",
-     "shell.execute_reply": "2022-08-08T21:22:17.768522Z",
-     "shell.execute_reply.started": "2022-08-08T21:22:12.846532Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading data: 100%|██████████| 81/81 [00:06<00:00, 12.20it/s]\n",
-      "Successfully loaded /home/jovyan/ODBiz/4-Parsing/output/2-parsed_biz.csv\n",
-      "df has 803584 rows\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load the csv\n",
-    "input_csv = '/home/jovyan/ODBiz/4-Parsing/output/2-parsed_biz.csv'\n",
-    "# input_csv = '/home/jovyan/ODBiz/4-Parsing/output/parsed_biz.csv'\n",
-    "total_lines = 803658\n",
-    "chunksize = 10000\n",
-    "df = pd.concat([chunk for chunk in tqdm(pd.read_csv(input_csv,\n",
-    "                                        chunksize=chunksize, \n",
-    "                                        dtype=str), \n",
-    "                                    desc='Loading data', \n",
-    "                                    total=total_lines//chunksize+1)\n",
-    "                ])\n",
-    "num_of_rows = df.shape[0]\n",
-    "print(f'Successfully loaded {input_csv}')\n",
-    "print(f'df has {num_of_rows} rows')\n",
-    "\n",
-    "localfiles = pd.unique(df['localfile'])\n"
    ]
   },
   {
@@ -3073,9 +3098,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (odbiz)",
-   "language": "python",
-   "name": "odbiz"
+   "name": "python3813jvsc74a57bd0e14a6e65307f8f691692612d68f6800491e991619d81311b752057c43593328e",
+   "display_name": "Python 3.8.13 64-bit ('odbiz': conda)"
   },
   "language_info": {
    "codemirror_mode": {
