Added a few more sanity checks

--- a/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
+++ b/4-Parsing/custom_parsing_data/post_parsed_data_viewing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-08-08T21:22:12.105736Z",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-08-08T21:22:12.846558Z",
@@ -37,7 +37,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 81/81 [00:05<00:00, 13.58it/s]Successfully loaded /home/jovyan/ODBiz/4-Parsing/output/parsed_and_combined_biz.csv\n",
+      "Loading data: 100%|██████████| 81/81 [00:10<00:00,  7.52it/s]Successfully loaded /home/jovyan/ODBiz/4-Parsing/output/parsed_and_combined_biz.csv\n",
       "df has 803584 rows\n",
       "\n"
      ]
@@ -64,16 +64,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "x = 27491\ny = 23588\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = len(pd.unique(df['street_no']))\n",
+    "y = len(pd.unique(df['LP2_street_no']))\n",
+    "print(f'x = {x}')\n",
+    "print(f'y = {y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
-      "text/plain": "                               full_address              unit street_no  \\\n7353                       145-H EAGLE CRES               NaN     145-H   \n7631                       122 C EAGLE CRES               NaN     122 C   \n29341   FRONT ST PARKADE NEW WESTMINSTER BC  Front st parkade        st   \n29467                   291 A Second Avenue               291         a   \n29486             A6890 Pacific Rim Highway               NaN     a6890   \n...                                     ...               ...       ...   \n802909                           4 Plazaway                 4  plazaway   \n803089              74 1/2 Churchill Avenue                74       1/2   \n803114                    60620A Green Road               NaN    60620a   \n803251                   144 A Thorold Road               144         a   \n803405                53-A East Main Street                53         a   \n\n       LP2_street_no          street_name             city province  \n7353             NaN           EAGLE CRES            Banff       AB  \n7631             NaN           EAGLE CRES            Banff       AB  \n29341             st             parkade   New Westminster       BC  \n29467              a        second avenue    Williams Lake       BC  \n29486          a6890  pacific rim highway         Ucluelet       BC  \n...              ...                  ...              ...      ...  \n802909      plazaway                  NaN          Welland       ON  \n803089           1/2     churchill avenue          Welland       ON  \n803114        60620a           green road          Welland       ON  \n803251             a         thorold road          Welland       ON  \n803405             a     east main street          Welland       ON  \n\n[17526 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>full_address</th>\n      <th>unit</th>\n      <th>street_no</th>\n      <th>LP2_street_no</th>\n      <th>street_name</th>\n      <th>city</th>\n      <th>province</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7353</th>\n      <td>145-H EAGLE CRES</td>\n      <td>NaN</td>\n      <td>145-H</td>\n      <td>NaN</td>\n      <td>EAGLE CRES</td>\n      <td>Banff</td>\n      <td>AB</td>\n    </tr>\n    <tr>\n      <th>7631</th>\n      <td>122 C EAGLE CRES</td>\n      <td>NaN</td>\n      <td>122 C</td>\n      <td>NaN</td>\n      <td>EAGLE CRES</td>\n      <td>Banff</td>\n      <td>AB</td>\n    </tr>\n    <tr>\n      <th>29341</th>\n      <td>FRONT ST PARKADE NEW WESTMINSTER BC</td>\n      <td>Front st parkade</td>\n      <td>st</td>\n      <td>st</td>\n      <td>parkade</td>\n      <td>New Westminster</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>29467</th>\n      <td>291 A Second Avenue</td>\n      <td>291</td>\n      <td>a</td>\n      <td>a</td>\n      <td>second avenue</td>\n      <td>Williams Lake</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>29486</th>\n      <td>A6890 Pacific Rim Highway</td>\n      <td>NaN</td>\n      <td>a6890</td>\n      <td>a6890</td>\n      <td>pacific rim highway</td>\n      <td>Ucluelet</td>\n      <td>BC</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>802909</th>\n      <td>4 Plazaway</td>\n      <td>4</td>\n      <td>plazaway</td>\n      <td>plazaway</td>\n      <td>NaN</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803089</th>\n      <td>74 1/2 Churchill Avenue</td>\n      <td>74</td>\n      <td>1/2</td>\n      <td>1/2</td>\n      <td>churchill avenue</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803114</th>\n      <td>60620A Green Road</td>\n      <td>NaN</td>\n      <td>60620a</td>\n      <td>60620a</td>\n      <td>green road</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803251</th>\n      <td>144 A Thorold Road</td>\n      <td>144</td>\n      <td>a</td>\n      <td>a</td>\n      <td>thorold road</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n    <tr>\n      <th>803405</th>\n      <td>53-A East Main Street</td>\n      <td>53</td>\n      <td>a</td>\n      <td>a</td>\n      <td>east main street</td>\n      <td>Welland</td>\n      <td>ON</td>\n    </tr>\n  </tbody>\n</table>\n<p>17526 rows × 7 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_address</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>LP2_street_no</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>city</th>\n",
+       "      <th>province</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7353</th>\n",
+       "      <td>145-H EAGLE CRES</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>145-H</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EAGLE CRES</td>\n",
+       "      <td>Banff</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7631</th>\n",
+       "      <td>122 C EAGLE CRES</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>122 C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EAGLE CRES</td>\n",
+       "      <td>Banff</td>\n",
+       "      <td>AB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29341</th>\n",
+       "      <td>FRONT ST PARKADE NEW WESTMINSTER BC</td>\n",
+       "      <td>Front st parkade</td>\n",
+       "      <td>st</td>\n",
+       "      <td>st</td>\n",
+       "      <td>parkade</td>\n",
+       "      <td>New Westminster</td>\n",
+       "      <td>BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29467</th>\n",
+       "      <td>291 A Second Avenue</td>\n",
+       "      <td>291</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>second avenue</td>\n",
+       "      <td>Williams Lake</td>\n",
+       "      <td>BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29486</th>\n",
+       "      <td>A6890 Pacific Rim Highway</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>a6890</td>\n",
+       "      <td>a6890</td>\n",
+       "      <td>pacific rim highway</td>\n",
+       "      <td>Ucluelet</td>\n",
+       "      <td>BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>802909</th>\n",
+       "      <td>4 Plazaway</td>\n",
+       "      <td>4</td>\n",
+       "      <td>plazaway</td>\n",
+       "      <td>plazaway</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Welland</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803089</th>\n",
+       "      <td>74 1/2 Churchill Avenue</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>1/2</td>\n",
+       "      <td>churchill avenue</td>\n",
+       "      <td>Welland</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803114</th>\n",
+       "      <td>60620A Green Road</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60620a</td>\n",
+       "      <td>60620a</td>\n",
+       "      <td>green road</td>\n",
+       "      <td>Welland</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803251</th>\n",
+       "      <td>144 A Thorold Road</td>\n",
+       "      <td>144</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>thorold road</td>\n",
+       "      <td>Welland</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803405</th>\n",
+       "      <td>53-A East Main Street</td>\n",
+       "      <td>53</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>east main street</td>\n",
+       "      <td>Welland</td>\n",
+       "      <td>ON</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17526 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               full_address              unit street_no  \\\n",
+       "7353                       145-H EAGLE CRES               NaN     145-H   \n",
+       "7631                       122 C EAGLE CRES               NaN     122 C   \n",
+       "29341   FRONT ST PARKADE NEW WESTMINSTER BC  Front st parkade        st   \n",
+       "29467                   291 A Second Avenue               291         a   \n",
+       "29486             A6890 Pacific Rim Highway               NaN     a6890   \n",
+       "...                                     ...               ...       ...   \n",
+       "802909                           4 Plazaway                 4  plazaway   \n",
+       "803089              74 1/2 Churchill Avenue                74       1/2   \n",
+       "803114                    60620A Green Road               NaN    60620a   \n",
+       "803251                   144 A Thorold Road               144         a   \n",
+       "803405                53-A East Main Street                53         a   \n",
+       "\n",
+       "       LP2_street_no          street_name             city province  \n",
+       "7353             NaN           EAGLE CRES            Banff       AB  \n",
+       "7631             NaN           EAGLE CRES            Banff       AB  \n",
+       "29341             st             parkade   New Westminster       BC  \n",
+       "29467              a        second avenue    Williams Lake       BC  \n",
+       "29486          a6890  pacific rim highway         Ucluelet       BC  \n",
+       "...              ...                  ...              ...      ...  \n",
+       "802909      plazaway                  NaN          Welland       ON  \n",
+       "803089           1/2     churchill avenue          Welland       ON  \n",
+       "803114        60620a           green road          Welland       ON  \n",
+       "803251             a         thorold road          Welland       ON  \n",
+       "803405             a     east main street          Welland       ON  \n",
+       "\n",
+       "[17526 rows x 7 columns]"
+      ]
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
