Updated documentation for Merging

--- a/3-Merging/merging_main.ipynb
+++ b/3-Merging/merging_main.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "source": [
+    "# Dropped rows\n",
+    "The scripts below will drop entries if they meet certain conditions that we deem as being irrelevant given the scope of this project\n",
+    "\n",
+    "## MergingBiz.py\n",
+    "This script performs basic deduplication. If a set of rows have exact matches with all of the following columns, then only one row is kept in the set, the script tries to keep the most recent row:\n",
+    "- 'business_name',\n",
+    "- 'licence_number',\n",
+    "- 'business_id_no',\n",
+    "- 'primary_NAICS',\n",
+    "- 'full_address',\n",
+    "- 'full_address_2',\n",
+    "- 'province',\n",
+    "- 'business_sector',\n",
+    "- 'licence_type'\n",
+    "\n",
+    "## RemoveInvalidCoordinates.py\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,11 +55,11 @@
      "name": "stdout",
      "text": [
       "----------------------------------------------------------------------------------------------------------------------------\n",
-      "Merging files: 100%|██████████| 61/61 [00:07<00:00,  7.89it/s]\n",
+      "Merging files: 100%|██████████| 61/61 [00:04<00:00, 14.78it/s]\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows.csv\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/double_check/csv_rows_sorted.csv\n",
       "Reordering columns...\n",
-      "Done in 2 s\n",
+      "Done in 1 s\n",
       "Standardizing Province Names...\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/double_check/standardized_province_names.csv\n",
       "Done in 1 s\n",
@@ -46,10 +70,10 @@
       "Fixing hyphens...\n",
       "Done in 1 s\n",
       "Creating temp column:\n",
-      "Capitalize values and remove punctuation characters: 100%|██████████| 9/9 [00:09<00:00,  1.10s/it]\n",
+      "Capitalize values and remove punctuation characters: 100%|██████████| 9/9 [00:10<00:00,  1.12s/it]\n",
       "Fill blanks with NULL...\n",
       "Done in 5 s\n",
-      "Appending dup_key columns together and assign to temp column: 100%|██████████| 9/9 [00:02<00:00,  3.42it/s]\n",
+      "Appending dup_key columns together and assign to temp column: 100%|██████████| 9/9 [00:02<00:00,  3.62it/s]\n",
       "Applying hashing to get new indicies...\n",
       "Filling in geo_source column\n",
       "Marking Duplicates...\n",
@@ -60,8 +84,8 @@
       "Writing 803765 dataframe entries to csv. This will take a while and unfortunately no easy progress bar solutions were available here...\n",
       "Duplicates only csv saved to /home/jovyan/ODBiz/3-Merging/double_check/ODBiz_dups_only.csv\n",
       "File saved to /home/jovyan/ODBiz/3-Merging/output/1-ODBiz_merged_2022-08-29.csv\n",
-      "csv took 11 s to save\n",
-      "Execution finished in 49.241765 seconds\n"
+      "csv took 12 s to save\n",
+      "Execution finished in 46.937354 seconds\n"
      ]
     }
    ],
@@ -71,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 81/81 [00:04<00:00, 17.77it/s]\n",
+      "Loading data: 100%|██████████| 81/81 [00:04<00:00, 17.61it/s]\n",
       "\n",
       "Fixing invalid coordinates and marking valid ones\n",
       "Done in 0 s\n",
@@ -96,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  2.14it/s]\n",
+      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  2.05it/s]\n",
       "Filling in NA as empty string\n",
       "Done in 4 s\n",
       "Concatenating address info\n",
@@ -114,7 +138,7 @@
       "Saving df_no_info to /home/jovyan/ODBiz/3-Merging/double_check/no_addr_info.csv\n",
       "Done in 1 s\n",
       "Saving df to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-29.csv\n",
-      "Done in 10 s\n",
+      "Done in 11 s\n",
       "df saved to /home/jovyan/ODBiz/3-Merging/output/3-ODBiz_merged_2022-08-29.csv\n"
      ]
     }
@@ -125,18 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  1.94it/s]\n",
+      "Loading data: 100%|██████████| 9/9 [00:04<00:00,  2.04it/s]\n",
       "Loaded in        803584 rows\n",
       "Resulting df has 803584 rows\n",
-      "File saved to /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-12.csv\n",
-      "Execution finished in 17 s\n"
+      "File saved to /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-29.csv\n",
+      "Execution finished in 19 s\n"
      ]
     }
    ],
@@ -146,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Most recent merged file saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
+      "most_recent_filepath = /home/jovyan/ODBiz/3-Merging/output/4-ODBiz_merged_2022-08-29.csv\nMost recent merged file saved to /home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv\n"
      ]
     }
    ],
@@ -204,6 +228,55 @@
     "shutil.copyfile(most_recent_filepath, output_filepath)\n",
     "print(f'most_recent_filepath = {most_recent_filepath}')\n",
     "print(f'Most recent merged file saved to {output_filepath}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/tmp/ipykernel_27461/1156949041.py:1: DtypeWarning: Columns (3,4,5,6,7,8,9,11,12,13,14,17,18,19,20,21,22,23,24,27,28,29,30,31,33,34,35,39,41,43,44) have mixed types. Specify dtype option on import or set low_memory=False.\n  df = pd.read_csv('/home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/home/jovyan/ODBiz/4-Parsing/input/ODBiz_Merged.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['idx', 'localfile', 'business_name', 'alt_business_name',\n",
+       "       'business_sector', 'business_subsector', 'business_description',\n",
+       "       'business_id_no', 'licence_number', 'licence_type', 'primary_NAICS',\n",
+       "       'secondary_NAICS', 'NAICS_descr', 'alt_econ_act_code',\n",
+       "       'alt_econ_act_descrip', 'latitude', 'longitude', 'full_address',\n",
+       "       'full_address_2', 'mailing_address', 'unit', 'street_no', 'street_name',\n",
+       "       'street_direction', 'street_type', 'city', 'province', 'postal_code',\n",
+       "       'country', 'business_website', 'email', 'telephone',\n",
+       "       'telephone_extension', 'toll_free_telephone', 'fax',\n",
+       "       'total_no_employees', 'no_full_time', 'no_part_time', 'no_seasonal',\n",
+       "       'date_established', 'indigenous', 'status', 'provider', 'geo_source',\n",
+       "       'NAICS_descr2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
