--- a/1-PreProcessing/preprocessing.ipynb
+++ b/1-PreProcessing/preprocessing.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "## External custom scripts\n",
     "A few cells run external scripts have been written as .py files. Here's a list of links to those scripts:\n",
-    "- [process_shp_files.py](https://kubeflow.aaw.cloud.statcan.ca/notebook/deil-lode/odbiz-more-ram/doc/tree/ODBiz/1-PreProcessing/process_shp_files.py): Converts .shp files to .csv files\n",
-    "- [standardize_dates.py](https://kubeflow.aaw.cloud.statcan.ca/notebook/deil-lode/odbiz-more-ram/doc/tree/ODBiz/1-PreProcessing/standardize_dates.py): Standardizes dates for the `date_established` variables\n",
-    "- [process_vancouver.py](https://kubeflow.aaw.cloud.statcan.ca/notebook/deil-lode/odbiz-more-ram/doc/tree/ODBiz/1-PreProcessing/process_vancouver.py): Performs a lot of cleaning for the Vancouver dataset, including: Filtering out non-Canadian businesses, extracting lat/lon coordinates from JSON string format, removes older duplicates\n"
+    "- `process_shp_files.py`: Converts .shp files to .csv files\n",
+    "- `standardize_dates.py`: Standardizes dates for the `date_established` variables\n",
+    "- `process_vancouver.py`: Performs a lot of cleaning for the Vancouver dataset, including: Filtering out non-Canadian businesses, extracting lat/lon coordinates from JSON string format, removes older duplicates\n"
    ]
   },
   {
@@ -3471,9 +3471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "odbiz",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "odbiz"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3485,7 +3485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.12"
   },
   "metadata": {
    "interpreter": {
