--- a/Deduplication/ODHF_copy/inputs/1_Jason.ipynb
+++ b/Deduplication/ODHF_copy/inputs/1_Jason.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-06T15:39:20.192729Z",
-     "iopub.status.busy": "2022-09-06T15:39:20.191993Z",
-     "iopub.status.idle": "2022-09-06T15:39:24.207167Z",
-     "shell.execute_reply": "2022-09-06T15:39:24.206381Z",
-     "shell.execute_reply.started": "2022-09-06T15:39:20.192676Z"
+     "iopub.execute_input": "2022-09-06T22:07:04.087271Z",
+     "iopub.status.busy": "2022-09-06T22:07:04.086701Z",
+     "iopub.status.idle": "2022-09-06T22:07:08.051709Z",
+     "shell.execute_reply": "2022-09-06T22:07:08.050715Z",
+     "shell.execute_reply.started": "2022-09-06T22:07:04.087239Z"
     },
     "tags": []
    },
@@ -1121,6 +1121,7 @@
     "    # SL define json structure and static fields\n",
     "    jsondict = {\n",
     "        \"filename\":'inputs/1NAICS_Test.csv',\n",
+    "        \"output_name\":'outputs/created_pairs.csv',\n",
     "        \"encoding\":\"utf8\",\n",
     "        \"index\":\"idx\",\n",
     "        \"column_map\":{\n",
